# clawstainer

./: .gitignore  Cargo.toml  Makefile  README.md  base.css  build.rs  components.yaml  docs.md  fleet.yaml  index.html  lima-clawstainer.yaml  skills.md  style.css
.claude/skills/push/: SKILL.md
blog/: agent-for-every-team-member.html  ai-agents-for-your-family.html  index.html
src/: cli.rs  error.rs  lima.rs  main.rs  output.rs
src/agent/: executor.rs  main.rs  protocol.rs  vsock.rs
src/commands/: cp.rs  create.rs  destroy.rs  exec.rs  fleet.rs  list.rs  logs.rs  mod.rs  port_forward.rs  provision.rs  shell.rs  snapshot.rs  stats.rs
src/component/: mod.rs  provisioner.rs
src/execlog/: logger.rs  mod.rs  reader.rs
src/firecracker/: api.rs  assets.rs  mod.rs  rootfs.rs  vsock.rs
src/image/: bootstrap.rs  mod.rs  overlay.rs  snapshot.rs
src/network/: bridge.rs  ipam.rs  mod.rs  nat.rs  tap.rs
src/runtime/: firecracker.rs  mod.rs  nspawn.rs
src/state/: lock.rs  mod.rs
