[package]
name = "clawstainer"
version = "0.1.0"
edition = "2021"
description = "Lightweight isolated Linux environments for AI agents"
license = "MIT"
repository = "https://github.com/friscobrisco/clawstainer"
readme = "README.md"
authors = ["Renée Rosillo"]
keywords = ["container", "sandbox", "ai", "agent", "nspawn"]
categories = ["command-line-utilities", "virtualization"]

[[bin]]
name = "clawstainer"
path = "src/main.rs"

[[bin]]
name = "claw-agent"
path = "src/agent/main.rs"
required-features = ["firecracker"]

[features]
firecracker = []

[dependencies]
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9"
chrono = { version = "0.4", features = ["serde"] }
anyhow = "1"
thiserror = "2"
fs2 = "0.4"
rand = "0.8"
dirs = "6"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
assert_cmd = "2"
predicates = "3"
